F05: Implement Seed feature into settlement generator